--- a/sextoTrimestre/proyecto/package.json
+++ b/sextoTrimestre/proyecto/package.json
@@ -11,13 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "16.2.0",
+    "@angular/cdk": "^16.2.13",
     "@angular/common": "16.2.0",
     "@angular/compiler": "16.2.0",
     "@angular/core": "16.2.0",
     "@angular/forms": "16.2.0",
+    "@angular/material": "^16.2.13",
     "@angular/platform-browser": "16.2.0",
     "@angular/platform-browser-dynamic": "16.2.0",
     "@angular/router": "16.2.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
