--- a/sextoTrimestre/proyecto/package.json
+++ b/sextoTrimestre/proyecto/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "16.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
+    "ng2-charts": "^5.0.4",
     "popper.js": "^1.16.1",
     "rxjs": "7.8.0",
     "tslib": "^2.3.0",
