--- a/sextoTrimestre/proyecto/angular.json
+++ b/sextoTrimestre/proyecto/angular.json
@@ -64,12 +64,15 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "proyecto:build"
+          },
           "configurations": {
             "production": {
-              "buildTarget": "proyecto:build:production"
+              "browserTarget": "proyecto:build:production"
             },
             "development": {
-              "buildTarget": "proyecto:build:development"
+              "browserTarget": "proyecto:build:development"
             }
           },
           "defaultConfiguration": "development"
