--- a/sextoTrimestre/proyecto/package.json
+++ b/sextoTrimestre/proyecto/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "17.2.1",
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "apexcharts": "^3.46.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
