--- a/sextoTrimestre/proyecto/package.json
+++ b/sextoTrimestre/proyecto/package.json
@@ -26,7 +26,9 @@
     "bootstrap": "^5.3.0",
     "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
+    "ng-apexcharts": "^1.9.0",
     "ng2-charts": "^5.0.4",
+    "ngx-apexcharts": "^0.4.7",
     "popper.js": "^1.16.1",
     "rxjs": "7.8.0",
     "tslib": "^2.6.2",
@@ -43,6 +45,6 @@
     "karma-coverage": "2.2.0",
     "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.1.0",
-    "typescript": "5.3.3"
+    "typescript": "^5.3.3"
   }
 }
