--- a/sextoTrimestre/proyecto/package.json
+++ b/sextoTrimestre/proyecto/package.json
@@ -41,6 +41,7 @@
     "@angular/cli": "17.2.0",
     "@angular/compiler-cli": "17.2.1",
     "@types/jasmine": "4.3.0",
+    "@types/jquery": "^3.5.29",
     "jasmine-core": "4.6.0",
     "karma": "6.4.0",
     "karma-chrome-launcher": "3.2.0",
