--- a/sextoTrimestre/proyecto/package.json
+++ b/sextoTrimestre/proyecto/package.json
@@ -23,9 +23,10 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@swimlane/ngx-datatable": "^20.1.0",
-    "apexcharts": "^3.46.0",
+    "@types/chart.js": "^2.9.41",
+    "apexcharts": "^3.48.0",
     "bootstrap": "^5.3.0",
-    "chart.js": "^4.4.1",
+    "chart.js": "^4.4.2",
     "html2pdf.js": "^0.10.1",
     "jquery": "^3.7.1",
     "ng-apexcharts": "^1.9.0",
