--- a/sextoTrimestre/package.json
+++ b/sextoTrimestre/package.json
@@ -3,5 +3,8 @@
     "@angular/animations": "^17.2.3",
     "material-design-icons": "^3.0.1",
     "sass-loader": "^14.1.1"
+  },
+  "scripts": {
+    "start": "node service.js"
   }
 }
