--- a/sextoTrimestre/package.json
+++ b/sextoTrimestre/package.json
@@ -5,6 +5,7 @@
     "sass-loader": "^14.1.1"
   },
   "scripts": {
-    "start": "node service.js"
+    "start": "cd sextoTrimestre/cd servicios && node service.js"
   }
+  
 }
