--- a/sextoTrimestre/package.json
+++ b/sextoTrimestre/package.json
@@ -4,8 +4,8 @@
     "material-design-icons": "^3.0.1",
     "sass-loader": "^14.1.1"
   },
-  "scripts": {
-    "start": "cd sextoTrimestre/cd servicios && node service.js"
-  }
-  
+"scripts": {
+  "start": "cd servicios && node service.js"
+}
+
 }
