--- a/sextoTrimestre/package.json
+++ b/sextoTrimestre/package.json
@@ -5,7 +5,7 @@
     "sass-loader": "^14.1.1"
   },
 "scripts": {
-  "start": "cd servicios && node service.js"
+  "start": "cd sextoTrimestre/servicios && node service.js"
 }
 
 }
